# docs/swagger.json
@@ -64,6 +64,21 @@
                 }
             }
         },
+        "/api/v1/account/{email}/order": {
+            "get": {
+                "summary": "get order by account",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "email",
+                        "name": "email",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/api/v1/book": {
             "get": {
                 "summary": "get all book record",
